Bug 1818820. Fix drawing of some blend modes with non-complex clips. r=bas, a=dmeehan

This ensures that we have our clips pushed when we expect them to.

Differential Revision: https://phabricator.services.mozilla.com/D171492